# example-databricks-wheel-project

./: .gitignore  README.md  pyproject.toml  tasks.py
data/jaffle_shop/: README.md
jobs/: jaffleshop-wheel.json.j2  jaffleshop.json.j2  jaffleshop.yml
projectname/: __init__.py  core.py
tests/: test_projectname.py  test_spark_example.py
